Jwt Service, Base de Datos, Configuración > Registro docente